// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add quotes 1`] = `
"---
Name: 
 - #Hello
 - World
 - ' #Hi'
 - #with/tab
 - #with/tab/teb/tib
 - #howdy_bla
 - #howdy-bla
Other tag: #Nothing
tags: #Nothing
---

Outside frontmatter

#tag

"
`;

exports[`Adds a new UUID 1`] = `
"---
date: 2021-02-05--5pmt5:20:48:42
---"
`;

exports[`Adds a new UUID 2`] = `
"---
date created: '2010-06-10 00:20'
id: c5627cfc-3bb6-4185-93cf-6b3cc7c10fa8
---

"
`;

exports[`Adds a new UUID, existing frontmatter 1`] = `
"---
date: 2021-02-05--5pmt5:20:48:42
---"
`;

exports[`Adds a new UUID, newHeaderTemplate 1`] = `
"---
id: c031791b-cf9c-463a-9d4a-84ed9584cb68
---

  No FrontMatter  
  
"
`;

exports[`Adds tags 1`] = `
"---
Name: 
 - #Hi
---


"
`;

exports[`Creates date first time 1`] = `
"---
date created: '2010-06-10 00:20'
---
No Header"
`;

exports[`Do not update if it's a new header 1`] = `
"---
date created: '2010-06-10 00:20'
---
No Header"
`;

exports[`Does not create header if update but not create 1`] = `"No Header"`;

exports[`Does not modify date 1`] = `
"---
date updated: '1999-06-10T00:20:00+02:00'
---
"
`;

exports[`Maintains properties in header 1`] = `
"---
title: Example
list:
  - oneX
  - 0
  - false
  - quotes
---
# A header

some text
            "
`;

exports[`Multiple fences 1`] = `
"---
other: something else
date: '2021-02-05--5pmt5:20:48:42'
id: alreadyPresent
---
"
`;

exports[`No newHeaderTemplate 1`] = `
"---
id: 72214964-4c9e-437b-bf4c-bb4ee0feb3ba
---

  No FrontMatter  
  "
`;

exports[`Preserve previous tags 1`] = `
"---
tags:
  - null
---
"
`;

exports[`Preserve previous tags 2`] = `
"---
date updated: '2020-12-09T00:14:06+01:00'
tags: '#literatura'
---
"
`;

exports[`Preserve previous tags 3`] = `
"---
date: '2021-02-05--5pmt5:20:48:42'
---
"
`;

exports[`Respects emojis 1`] = `
"---
tag: '#🦐'

---🦐
            "
`;

exports[`Respects hash 1`] = `
"---
tag: '#Interpretability'
---
            "
`;

exports[`add quote 1`] = `
"---
tag: #hello

---
            "
`;

exports[`createHeaderIfNotPresent: false 1`] = `"No Header"`;

exports[`createHeaderIfNotPresent: true 1`] = `
"---
date created: '2010-06-10 00:20'
---
No Header"
`;

exports[`maintain UUID 1`] = `
"---
date: 2021-02-05--5pmt5:20:48:42
id: alreadyPresent
---"
`;
